--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https.//www.bbc.ge" width="1243px" height="898px"></iframe>
+    <iframe src="https.//www.bbc.com" width="1243px" height="898px"></iframe>
 </body>
 </html>
